Methode zum Hinzufügen eines Comparators auf Lookups